@@ -25,4 +25,22 @@ subtest 'built in type' => sub {
   is( baboon(11), 22, "baboon(11) = 22" );
 };
 
+subtest 'sub_ref' => sub {
+
+  my $ffi = FFI::Platypus->new;
+  $ffi->lib($libtest);
+  my $sub_ref = $ffi->function('f0', [ 'uint8' ] => 'uint8', sub { my($xsub, $arg) = @_; $arg*2})->sub_ref;
+
+  is $sub_ref->(99), 99*2, 'calls okay';
+  is ref($sub_ref), 'CODE', 'it is a code reference';
+
+  if(eval { require Sub::Identify; 1 })
+  {
+    my $name = Sub::Identify::sub_name($sub_ref);
+    my $package = Sub::Identify::stash_name($sub_ref);
+    note "name = ${package}::$name";
+  }
+
+};
+
 done_testing;
